logs/phase487_dashboard_recovery_runtime.log
file:///Users/marcela-dev/Projects/Motherboard_Systems_HQ/server.mjs:788
import apiGuidanceRouter from "./server/routes/api-guidance.mjs";
^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: Identifier 'apiGuidanceRouter' has already been declared
    at compileSourceTextModule (node:internal/modules/esm/utils:351:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:107:18)
    at #translate (node:internal/modules/esm/loader:546:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:593:27)
    at async #link (node:internal/modules/esm/module_job:180:19)

Node.js v24.4.0
